--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -18,5 +18,6 @@ jobs:
         run: |
           mkdir build
           cd build
+          export CXXFLAGS+=" -Wno-attributes -Wno-incompatible-pointer-types -Wno-implicit-function-declaration"
           cmake -GNinja -DCMAKE_BUILD_TYPE=Release -DPARSEC_DIST_WITH_MPI=OFF ..
           cmake --build . -j $(nproc)
