--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           msystem: UCRT64
           update: true
-          install: git bison flex mingw-w64-ucrt-x86_64-cc mingw-w64-ucrt-x86_64-fc mingw-w64-ucrt-x86_64-gcc-libgfortran mingw-w64-ucrt-x86_64-cmake mingw-w64-ucrt-x86_64-ninja mingw-w64-ucrt-x86_64-hwloc
+          install: git bison flex mingw-w64-ucrt-x86_64-cc mingw-w64-ucrt-x86_64-fc mingw-w64-ucrt-x86_64-gcc-libgfortran mingw-w64-ucrt-x86_64-cmake mingw-w64-ucrt-x86_64-msmpi mingw-w64-ucrt-x86_64-ninja mingw-w64-ucrt-x86_64-hwloc
       - name: CI-Build
         run: |
           mkdir build
